--- a/styles/cymatics.css
+++ b/styles/cymatics.css
@@ -82,7 +82,7 @@ p {
   top: 0;
   right: 0;
   color: black;
-  width: 15%;
+  width: 5%;
   text-align: center;
   text-decoration: none;
   font-size: 10px;
@@ -104,7 +104,7 @@ p {
   filter: invert(1);
   display: flex;
   color: white;
-  width: 15%;
+  width: 5%;
   font-size: 10px;
   height: 50px;
   border-radius: 20px;
@@ -228,3 +228,66 @@ a {
 a:hover {
   text-decoration: underline;
 }
+div.sticky {
+  position: -webkit-sticky;
+      position: sticky;
+      top: 0;
+      display: flex;
+      padding: 20px;
+      font-size: 25px;
+      font-family: sans-serif;
+      margin-left: 1%;
+      font-weight: normal;
+      letter-spacing: -10%;
+      z-index: 150;
+      align-content: center;
+      flex-direction: row;
+      justify-content: flex-start;
+      flex-wrap: nowrap;
+      align-items: center;
+}
+h1 {
+  margin: 0;
+  font-size: 30px;
+  letter-spacing: -1px;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  margin-right: 1%;
+}
+
+.name {
+  z-index: 1;
+}
+
+.bottom {
+  display: flex;
+    justify-content: space-between;
+}
+
+
+
+a {
+
+  color: black;
+  text-decoration: none;
+}
+
+a {
+  color: black;
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+.bottom {
+  display: flex;
+    justify-content: space-between;
+    align-items: center;
+    align-content: flex-start;
+    flex-direction: row;
+    flex-wrap: nowrap;
+
+  }
