--- a/styles/grounded.css
+++ b/styles/grounded.css
@@ -1,5 +1,6 @@
-html, body {
+ body {
   height: 100%;
+  margin: 8px;
 }
 
 .headercontainer {
@@ -86,7 +87,7 @@ p {
   top: 0;
   right: 0;
   color: black;
-  width: 15%;
+  width: 5%;
   text-align: center;
   text-decoration: none;
   font-size: 10px;
@@ -108,7 +109,7 @@ p {
   filter: invert(1);
   display: flex;
   color: white;
-  width: 15%;
+  width: 5%;
   font-size: 10px;
   height: 50px;
   border-radius: 20px;
@@ -218,3 +219,50 @@ height: 60%;
     background-color: black;
     justify-content: center;
 }
+
+div.sticky {
+  position: -webkit-sticky;
+      position: sticky;
+      top: 0;
+      display: flex;
+      padding: 20px;
+      font-size: 25px;
+      font-family: sans-serif;
+      margin-left: 1%;
+      font-weight: normal;
+      letter-spacing: -10%;
+      z-index: 150;
+      align-content: center;
+      flex-direction: row;
+      justify-content: flex-start;
+      flex-wrap: nowrap;
+      align-items: center;
+    }
+
+h1 {
+  margin: 0;
+  font-size: 30px;
+  letter-spacing: -1px;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  margin-right: 1%;
+}
+
+a {
+  color: black;
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+.bottom {
+  display: flex;
+    justify-content: space-between;
+    align-items: center;
+    align-content: flex-start;
+    flex-direction: row;
+    flex-wrap: nowrap;
+
+  }
