--- a/styles/metoo.css
+++ b/styles/metoo.css
@@ -197,3 +197,50 @@ p {
 .first {
 height: 650px;
 }
+
+div.sticky {
+  position: -webkit-sticky;
+      position: sticky;
+      top: 0;
+      display: flex;
+      padding: 20px;
+      font-size: 25px;
+      font-family: sans-serif;
+      margin-left: 1%;
+      font-weight: normal;
+      letter-spacing: -10%;
+      z-index: 150;
+      align-content: center;
+      flex-direction: row;
+      justify-content: flex-start;
+      flex-wrap: nowrap;
+      align-items: center;
+}
+h1 {
+  margin: 0;
+  font-size: 30px;
+  letter-spacing: -1px;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  margin-right: 1%;
+}
+
+a {
+  color: black;
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+.bottom {
+  display: flex;
+    justify-content: space-between;
+    align-items: center;
+    align-content: flex-start;
+    flex-direction: row;
+    flex-wrap: nowrap;
+
+  }
