--- a/styles/deepin.css
+++ b/styles/deepin.css
@@ -1,3 +1,8 @@
+ body {
+  height: 100%;
+  margin: 8px;
+}
+
 .headercontainer {
   display: flex;
   justify-content: center;
@@ -15,9 +20,10 @@
 
 .about {
   display: flex;
-  font-family: sans-serif;
-  justify-content: center;
-  margin: 0;
+font-family: sans-serif;
+justify-content: flex-start;
+margin: 0;
+width: 100%;
 }
 
 .home {
@@ -62,6 +68,7 @@ h1 {
   margin: 0;
   font-size: 30px;
   letter-spacing: -5px;
+  width: 30%;
 }
 
 p {
@@ -74,6 +81,7 @@ p {
   width: 900px;
   height: 707px;
 }
+
 
 .cv:hover {
   border-width: 1.5px;
@@ -186,26 +194,13 @@ height: 60%;
     margin-top: 1%;
 }
 
-.images {
-  display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-content: center;
+.vp-center {
+    display: flex;
     align-items: center;
+    background-color: black;
+    justify-content: center;
 }
 
-img {
-  padding: 1%;
-}
-
-a {
-  color: black;
-  text-decoration: none;
-}
-
-a:hover {
-  text-decoration: underline;
-}
 
 h1 {
   margin: 0;
@@ -217,23 +212,6 @@ h1 {
   margin-right: 1%;
 }
 
-.name {
-  z-index: 1;
-}
-
-.bottom {
-  display: flex;
-    justify-content: space-between;
-}
-
-
-
-a {
-
-  color: black;
-  text-decoration: none;
-}
-
 a {
   color: black;
   text-decoration: none;
@@ -242,7 +220,6 @@ a {
 a:hover {
   text-decoration: underline;
 }
-
 .bottom {
   display: flex;
     justify-content: space-between;
@@ -307,16 +284,14 @@ a:hover {
     align-content: flex-end;
   }
 
-  .name {
-    width: 100%;
-  }
 
   div.sticky {
     position: -webkit-sticky;
     position: sticky;
     top: 0;
     padding: 0px;
-    margin: 2%;
+    margin: 1%;
+    z-index: 1;
     font-family: sans-serif;
     margin-left: 1%;
     font-weight: normal;
