--- a/styles/knowing.css
+++ b/styles/knowing.css
@@ -1,3 +1,8 @@
+ body {
+  height: 100%;
+  margin: 8px;
+}
+
 .headercontainer {
   display: flex;
   justify-content: center;
@@ -16,8 +21,10 @@
 .about {
   display: flex;
   font-family: sans-serif;
-  justify-content: center;
   margin: 0;
+  z-index: 1;
+  width: 110%;
+  justify-content: flex-start;
 }
 
 .home {
@@ -39,6 +46,7 @@
   border-width: 1.5px;
   border-style: solid;
   border-color: white;
+  margin: 1%;
 }
 
 .home:hover {
@@ -60,8 +68,9 @@
 
 h1 {
   margin: 0;
-  font-size: 30px;
+  font-size: 50px;
   letter-spacing: -5px;
+  width: 40%;
 }
 
 p {
@@ -70,10 +79,17 @@ p {
   letter-spacing: 0px;
 }
 
+h2 {
+  font-family: sans-serif;
+  margin: 0;
+  letter-spacing: -2px;
+}
+
 .cover {
   width: 900px;
   height: 707px;
 }
+
 
 .cv:hover {
   border-width: 1.5px;
@@ -111,7 +127,6 @@ p {
   border-width: 1.5px;
   border-style: solid;
   border-color: black;
-  margin: 1%;
 }
 
 .home:hover {
@@ -162,49 +177,33 @@ ul {
   display: flex;
 }
 
-.vp-center {
-  margin-top: 0%;
+#carousel {
+  width: 100%;
+
+  background-color: white;
+  overflow: auto;
+  white-space: nowrap;
 }
 
-.vidcontainer {
-  position: initial;
+#carousel .slide {
+  display: inline-block;
 }
 
-p {
-  font-size: 15px;
+.carouselcon {
+  width: 100%;
+  height: 90%;
+  align-items: center;
+
 }
 
-img {
-width: 60%;
-height: 60%;
+.cover1 {
+  height: 707px;
+  width: 900px;
 }
 
-.imgp {
-  display: flex;
-    flex-direction: row;
-    justify-content: center;
-    margin-top: 1%;
-}
-
-.images {
-  display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-content: center;
-    align-items: center;
-}
-
-img {
-  padding: 1%;
-}
-
-a {
-  color: black;
-  text-decoration: none;
-}
-
-a:hover {
-  text-decoration: underline;
+.cover {
+  height: 707px;
+  width: 900px;
 }
 
 h1 {
@@ -217,23 +216,6 @@ h1 {
   margin-right: 1%;
 }
 
-.name {
-  z-index: 1;
-}
-
-.bottom {
-  display: flex;
-    justify-content: space-between;
-}
-
-
-
-a {
-
-  color: black;
-  text-decoration: none;
-}
-
 a {
   color: black;
   text-decoration: none;
@@ -242,7 +224,6 @@ a {
 a:hover {
   text-decoration: underline;
 }
-
 .bottom {
   display: flex;
     justify-content: space-between;
@@ -307,9 +288,6 @@ a:hover {
     align-content: flex-end;
   }
 
-  .name {
-    width: 100%;
-  }
 
   div.sticky {
     position: -webkit-sticky;
@@ -317,6 +295,7 @@ a:hover {
     top: 0;
     padding: 0px;
     margin: 2%;
+    z-index: 1;
     font-family: sans-serif;
     margin-left: 1%;
     font-weight: normal;
