--- a/styles/out.css
+++ b/styles/out.css
@@ -25,6 +25,7 @@
   justify-content: center;
   margin: 0;
   z-index: 1;
+  width: 100%;
 }
 
 .home {
@@ -89,27 +90,6 @@ h2 {
   height: 707px;
 }
 
-.cv {
-  font-family: sans-serif;
-  background-color: white;
-  position: absolute;
-  top: 0;
-  right: 0;
-  color: black;
-  width: 5%;
-  text-align: center;
-  text-decoration: none;
-  font-size: 10px;
-  height: 50px;
-  border-radius: 20px;
-  align-items: center;
-  display: flex;
-  font-weight: bolder;
-  border-width: 1.5px;
-  border-style: solid;
-  border-color: black;
-  margin: 1%;
-}
 
 .cv:hover {
   border-width: 1.5px;
@@ -190,6 +170,7 @@ h1 {
   margin: 0;
   font-size: 30px;
   letter-spacing: -1px;
+  width: 25%;
 }
 
 ul {
@@ -221,24 +202,6 @@ margin-top: 1%;
   width: 900px;
 }
 
-div.sticky {
-  position: -webkit-sticky;
-      position: sticky;
-      top: 0;
-      display: flex;
-      padding: 20px;
-      font-size: 25px;
-      font-family: sans-serif;
-      margin-left: 1%;
-      font-weight: normal;
-      letter-spacing: -10%;
-      z-index: 150;
-      align-content: center;
-      flex-direction: row;
-      justify-content: flex-start;
-      flex-wrap: nowrap;
-      align-items: center;
-}
 h1 {
   margin: 0;
   font-size: 30px;
@@ -273,4 +236,75 @@ a:hover {
     flex-direction: row;
     flex-wrap: nowrap;
 
+  }
+
+  .fa {
+    padding: 20px;
+    font-size: 30px;
+    width: 1;
+    height: 10px;
+    text-align: center;
+    text-decoration: none;
+    margin: 5px 2px;
+    border-radius: 100%;
+
+  }
+
+  .fa-linkedin {
+    background: #white;
+    color: black;
+  }
+
+  .fa-instagram {
+    background: #white;
+    color: black;
+  }
+
+  .iconcon {
+    display: flex;
+        justify-content: flex-end;
+        width: 100%;
+
+  }
+
+  .cv {
+    /* margin: 1%; */
+    */: ;
+    font-family: sans-serif;
+    background-color: white;
+    /* top: 0; */
+    /* right: 0; */
+    color: black;
+    width: 50px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 10px;
+    height: 50px;
+    border-radius: 20px;
+    align-items: center;
+    display: flex;
+    font-weight: bolder;
+    border-width: 1.5px;
+    border-style: solid;
+    border-color: black;
+    justify-content: flex-end;
+    flex-direction: row;
+    align-content: flex-end;
+  }
+
+
+  div.sticky {
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    padding: 0px;
+    margin: 2%;
+    z-index: 1;
+    font-family: sans-serif;
+    margin-left: 1%;
+    font-weight: normal;
+    display: flex;
+    letter-spacing: -10%;
+    /* margin: 0; */
+    align-items: center;
   }
