--- a/styles/stylesconq.css
+++ b/styles/stylesconq.css
@@ -22,6 +22,7 @@ body {
   display: flex;
     font-family: sans-serif;
     justify-content: center;
+    width: 50%;
 }
 
 .home {
@@ -73,15 +74,16 @@ h2 {
   height: 707px;
 }
 
-.cv {
-  margin: 1%;
+
+.cv:hover {
+  /* margin: 1%; */
+  */: ;
   font-family: sans-serif;
   background-color: white;
-  position: absolute;
-  top: 0;
-  right: 0;
+  /* top: 0; */
+  /* right: 0; */
   color: black;
-  width: 5%;
+  width: 50px;
   text-align: center;
   text-decoration: none;
   font-size: 10px;
@@ -93,23 +95,10 @@ h2 {
   border-width: 1.5px;
   border-style: solid;
   border-color: black;
-}
-
-.cv:hover {
-  border-width: 1.5px;
-  border-style: solid;
-  border-color: white;
+  justify-content: flex-end;
+  flex-direction: row;
+  align-content: flex-end;
   filter: invert(1);
-  display: flex;
-  color: white;
-  width: 5%;
-  font-size: 10px;
-  height: 50px;
-  border-radius: 20px;
-  align-items: center;
-  font-weight: bolder;
-  right: 0;
-  top: 0;
 }
 
 .home {
@@ -288,24 +277,8 @@ video {
     align-content: center;
     align-items: center;
 }
-div.sticky {
-  position: -webkit-sticky;
-      position: sticky;
-      top: 0;
-      display: flex;
-      padding: 20px;
-      font-size: 25px;
-      font-family: sans-serif;
-      margin-left: 1%;
-      font-weight: normal;
-      letter-spacing: -10%;
-      z-index: 150;
-      align-content: center;
-      flex-direction: row;
-      justify-content: flex-start;
-      flex-wrap: nowrap;
-      align-items: center;
-}
+
+
 .bottom {
   display: flex;
     justify-content: space-between;
@@ -342,4 +315,76 @@ a:hover {
     flex-direction: row;
     flex-wrap: nowrap;
 
+  }
+
+
+  .fa {
+    padding: 20px;
+    font-size: 30px;
+    width: 1;
+    height: 10px;
+    text-align: center;
+    text-decoration: none;
+    margin: 5px 2px;
+    border-radius: 100%;
+
+  }
+
+  .fa-linkedin {
+    background: #white;
+    color: black;
+  }
+
+  .fa-instagram {
+    background: #white;
+    color: black;
+  }
+
+  .iconcon {
+    display: flex;
+        justify-content: flex-end;
+        width: 100%;
+
+  }
+
+  .cv {
+    /* margin: 1%; */
+    */: ;
+    font-family: sans-serif;
+    background-color: white;
+    /* top: 0; */
+    /* right: 0; */
+    color: black;
+    width: 50px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 10px;
+    height: 50px;
+    border-radius: 20px;
+    align-items: center;
+    display: flex;
+    font-weight: bolder;
+    border-width: 1.5px;
+    border-style: solid;
+    border-color: black;
+    justify-content: flex-end;
+    flex-direction: row;
+    align-content: flex-end;
+  }
+
+
+  div.sticky {
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    padding: 0px;
+    margin: 2%;
+    z-index: 1;
+    font-family: sans-serif;
+    margin-left: 1%;
+    font-weight: normal;
+    display: flex;
+    letter-spacing: -10%;
+    /* margin: 0; */
+    align-items: center;
   }
