--- a/styles/alone.css
+++ b/styles/alone.css
@@ -20,11 +20,12 @@
 
 .about {
   display: flex;
-  font-family: sans-serif;
-  justify-content: center;
-  margin: 0;
-  z-index: 1;
-  width: 100%;
+      font-family: sans-serif;
+      justify-content: flex-start;
+      margin: 0;
+      z-index: 1;
+      width: 100%;
+  }
 }
 
 .home {
@@ -70,6 +71,7 @@ h1 {
   margin: 0;
   font-size: 50px;
   letter-spacing: -5px;
+  width: 25%;
 }
 
 p {
