--- a/styles/cutit.css
+++ b/styles/cutit.css
@@ -1,7 +1,6 @@
  body {
   height: 100%;
   margin: 8px;
-
 }
 
 .headercontainer {
@@ -22,10 +21,9 @@
 .about {
   display: flex;
   font-family: sans-serif;
-  justify-content: center;
+  justify-content: flex-start;
   margin: 0;
-  z-index: 1;
-  width: 110%;
+  width: 70%;
 }
 
 .home {
@@ -47,7 +45,6 @@
   border-width: 1.5px;
   border-style: solid;
   border-color: white;
-  margin: 1%;
 }
 
 .home:hover {
@@ -69,20 +66,15 @@
 
 h1 {
   margin: 0;
-  font-size: 50px;
+  font-size: 30px;
   letter-spacing: -5px;
+  width: 20%;
 }
 
 p {
   font-size: 15px;
   font-weight: normal;
   letter-spacing: 0px;
-}
-
-h2 {
-  font-family: sans-serif;
-  margin: 0;
-  letter-spacing: -2px;
 }
 
 .cover {
@@ -127,6 +119,7 @@ h2 {
   border-width: 1.5px;
   border-style: solid;
   border-color: black;
+  margin: 1%;
 }
 
 .home:hover {
@@ -170,7 +163,6 @@ h1 {
   margin: 0;
   font-size: 30px;
   letter-spacing: -1px;
-  width: 25%;
 }
 
 ul {
@@ -178,29 +170,37 @@ ul {
   display: flex;
 }
 
-#carousel {
-  width: 100%;
-margin-top: 1%;
-  background-color: white;
-  overflow: auto;
-  white-space: nowrap;
+.vp-center {
+  margin-top: 0%;
 }
 
-#carousel .slide {
-  display: inline-block;
+.vidcontainer {
+  position: initial;
 }
 
-
-
-.cover1 {
-  height: 707px;
-  width: 900px;
+p {
+  font-size: 15px;
 }
 
-.cover {
-  height: 707px;
-  width: 900px;
+img {
+width: 60%;
+height: 60%;
 }
+
+.imgp {
+  display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-top: 1%;
+}
+
+.vp-center {
+    display: flex;
+    align-items: center;
+    background-color: black;
+    justify-content: center;
+}
+
 
 h1 {
   margin: 0;
@@ -220,14 +220,6 @@ a {
 a:hover {
   text-decoration: underline;
 }
-.vidcontainer {
-
-  display: flex;
-  justify-content:center;
-  margin: 5%;
-
-}
-
 .bottom {
   display: flex;
     justify-content: space-between;
