--- a/styles/stylesconq.css
+++ b/styles/stylesconq.css
@@ -22,7 +22,7 @@ body {
   display: flex;
     font-family: sans-serif;
     justify-content: center;
-    width: 50%;
+    width: 500px;
 }
 
 .home {
@@ -170,7 +170,9 @@ h1 {
   position: sticky;
   top: 0;
   margin-right: 1%;
+  font-family: sans-serif;
 }
+
 
 h2 {
   display: inline-block;
@@ -199,12 +201,12 @@ ul {
 }
 
 .movingsword {
-  height: 600px;
+  height: 505px;
     width: 460px;
 }
 
 .movingthey {
-  height: 600px;
+  height: 505px;
       width: 460px;
 }
 
@@ -343,7 +345,7 @@ a:hover {
   .iconcon {
     display: flex;
         justify-content: flex-end;
-        width: 100%;
+        width: 90%;
 
   }
 
@@ -375,16 +377,154 @@ a:hover {
 
   div.sticky {
     position: -webkit-sticky;
-    position: sticky;
-    top: 0;
-    padding: 0px;
-    margin: 2%;
-    z-index: 1;
-    font-family: sans-serif;
-    margin-left: 1%;
-    font-weight: normal;
-    display: flex;
-    letter-spacing: -10%;
-    /* margin: 0; */
-    align-items: center;
+        position: sticky;
+        top: 0;
+        padding: 0px;
+        margin: 2%;
+        z-index: 1;
+        font-family: sans-serif;
+        margin-left: 1%;
+        font-weight: normal;
+        display: flex;
+        letter-spacing: -10%;
+        margin-bottom: 0;
+        /* margin: 0; */
+        /* align-items: center;*/  }
+
+  .row {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0 4px;
+  justify-content: center;
+}
+
+/* Create four equal columns that sits next to each other */
+.column {
+  flex: 25%;
+  max-width: 35%;
+  padding: 0 10px;
+}
+
+.column img {
+  margin-top: 3%;
+  vertical-align: middle;
+  width: 100%;
+}
+
+.column video {
+  margin-top: 0%;
+  vertical-align: middle;
+  width: 90%;
+  height: 30%;
+}
+
+/* Responsive layout - makes a two column-layout instead of four columns */
+@media screen and (max-width: 800px) {
+  .column {
+    flex: 50%;
+    max-width: 50%;
   }
+}
+
+/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+  .column {
+    flex: 100%;
+    max-width: 100%;
+  }
+}
+
+
+
+
+
+
+
+
+/* The side navigation menu */
+.sidenav {
+  height: 100%;
+      width: 0;
+      position: fixed;
+      z-index: 1;
+      top: 0;
+      left: 0;
+      background-color: #111;
+      overflow-x: hidden;
+      padding-top: 60px;
+      transition: 0.5s;}
+
+/* The navigation menu links */
+.sidenav a {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #818181;
+  display: block;
+  transition: 0.3s;
+}
+
+/* When you mouse over the navigation links, change their color */
+.sidenav a:hover {
+  color: #f1f1f1;
+}
+
+/* Position and style the close button (top right corner) */
+.sidenav .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
+}
+
+/* Style page content - use this if you want to push the page content to the right when you open the side navigation */
+#main {
+  transition: margin-left .5s;
+      padding: 0 20px;
+
+}
+
+#main2 {
+  transition: margin-left .5s;
+      padding: 0 20px;
+
+}
+
+/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
+@media screen and (max-height: 450px) {
+  .sidenav {padding-top: 15px;}
+  .sidenav a {font-size: 18px;}
+}
+
+.head {
+  display: flex;
+  align-content: center;
+  top: 0;
+  width: 100%;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+
+}
+
+.aboutcontainer {
+}
+
+.opencon {
+  display: flex;
+  align-content: center;
+  width: 8%;
+  flex-direction: column;
+  justify-content: center;
+  padding: 0 1% 0 0;
+  height: 8%;
+}
+
+
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 48 }
