--- a/styles/stylesconq.css
+++ b/styles/stylesconq.css
@@ -418,6 +418,13 @@ a:hover {
   height: 30%;
 }
 
+.column video {
+  margin-top: 0%;
+  vertical-align: middle;
+  width: 90%;
+  height: 30%;
+}
+
 /* Responsive layout - makes a two column-layout instead of four columns */
 @media screen and (max-width: 800px) {
   .column {
