--- a/styles/stylesconq.css
+++ b/styles/stylesconq.css
@@ -506,11 +506,10 @@ img {
   }
 }
 
-
 @media only screen
 
-/* iphone SE   */
-and (device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 3) {
+/* Phone 13 mini, iPhone 12 mini, iPhone 11 Pro, iPhone Xs, and iPhone X  */
+and (device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3) {
   .sticky {
     display: flex;
     align-content: center;
@@ -575,7 +574,6 @@ and (device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-r
     margin-bottom: 0;
   }
 }
-
 
   @media only screen
 
