--- a/styles/styleswig.css
+++ b/styles/styleswig.css
@@ -506,17 +506,6 @@ img {
   }
 }
 
-@media only screen and (min-width: 390px) {
-  .sticky {
-    flex-direction: row;
-    align-items: center;
-  }
-
-  @media only screen and (min-width: 390px) {
-
-
-
-  }
 
   @media only screen
 
@@ -578,7 +567,7 @@ img {
       width: 75vw;
       LEFT: 50%;
       right: 50%;
-      margin-right: -70vw;
+      margin-right: -50vw;
       margin-left: -50vw;
     }
 
@@ -586,3 +575,143 @@ img {
       margin-bottom: 0;
     }
   }
+
+
+
+    @media only screen
+
+    /* iphone XR and iphone 11 */
+    and (device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 2) {
+      .sticky {
+        display: flex;
+        align-content: center;
+        top: 0;
+        width: 100%;
+        flex-direction: row;
+        justify-content: center;
+        flex-wrap: nowrap;
+        align-items: flex-start;
+      }
+
+      .head {
+        display: flex;
+        align-content: center;
+        top: 0;
+        width: 100%;
+        flex-direction: column;
+        justify-content: center;
+        flex-wrap: nowrap;
+        align-items: center;
+        margin-left: 10%;
+      }
+
+      #main {
+        padding: 0;
+      }
+
+      .iconcon {
+        display: flex;
+        justify-content: center;
+        width: 100%;
+      }
+
+      .cv {
+        position: ;
+        right: 3%;
+        top: 2%;
+      }
+
+      .about {
+        width: 100%;
+        text-align: center;
+        position: relative;
+        /* right: 50%; */
+        /* left: 50%; */
+      }
+
+      .aboutcontainer {
+        display: flex;
+        justify-content: center;
+        display: flex;
+        justify-content: center;
+        position: relative;
+        width: 75vw;
+        LEFT: 50%;
+        right: 50%;
+        margin-right: -50vw;
+        margin-left: -50vw;
+      }
+
+      h1 {
+        margin-bottom: 0;
+      }
+    }
+
+    @media only screen
+
+    /* iphone SE   */
+    and (device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2) {
+      .sticky {
+        display: flex;
+        align-content: center;
+        top: 0;
+        width: 100%;
+        flex-direction: row;
+        justify-content: center;
+        flex-wrap: nowrap;
+        align-items: flex-start;
+      }
+
+      .head {
+        display: flex;
+        align-content: center;
+        top: 0;
+        width: 100%;
+        flex-direction: column;
+        justify-content: center;
+        flex-wrap: nowrap;
+        align-items: center;
+        margin-left: 10%;
+      }
+
+      #main {
+        padding: 0;
+      }
+
+      .iconcon {
+        display: flex;
+        justify-content: center;
+        width: 100%;
+      }
+
+      .cv {
+        position: ;
+        right: 3%;
+        top: 2%;
+      }
+
+      .about {
+        width: 100%;
+        text-align: center;
+        position: relative;
+        /* right: 50%; */
+        /* left: 50%; */
+      }
+
+      .aboutcontainer {
+        display: flex;
+        justify-content: center;
+        display: flex;
+        justify-content: center;
+        position: relative;
+        width: 75vw;
+        LEFT: 50%;
+        right: 50%;
+        margin-right: -50vw;
+        margin-left: -50vw;
+      }
+
+      h1 {
+        margin-bottom: 0;
+      }
+    }
